[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Edith Zeng <edith.xiaoyuzeng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.0.286"
openai = ">=0.28.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
